Fix field widths in demos on mobile

--- a/docs/src/app/(public)/(content)/react/components/input/demos/hero/css-modules/index.module.css
+++ b/docs/src/app/(public)/(content)/react/components/input/demos/hero/css-modules/index.module.css
@@ -3,7 +3,8 @@
   padding-left: 0.875rem;
   margin: 0;
   border: 1px solid var(--color-gray-200);
-  width: 16rem;
+  width: 100%;
+  max-width: 16rem;
   height: 2.5rem;
   border-radius: 0.375rem;
   font-family: inherit;
